2022-09-27T08:39:07Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3134150010
* notice: last 14d: unq all: 2 31
* notice: prev accum: outdated-unq outdated-all / unq all: 328 514 / 350 545
* notice: next accum: outdated-unq outdated-all / unq all: 328 514 / 350 545
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-13 2022-09-27]

2022-09-27T02:28:30Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3132518296
* notice: last 14d: unq all: 2 31
* notice: prev accum: outdated-unq outdated-all / unq all: 327 512 / 350 545
* notice: next accum: outdated-unq outdated-all / unq all: 328 514 / 350 545
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -0 -1 / 2 2
* notice: removed / changed dates: [2022-09-12] / [2022-09-13]

2022-09-26T08:34:01Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3126250011
* notice: last 14d: unq all: 2 33
* notice: prev accum: outdated-unq outdated-all / unq all: 327 512 / 348 544
* notice: next accum: outdated-unq outdated-all / unq all: 327 512 / 350 545
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-09-12 2022-09-26]

2022-09-25T16:33:01Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3122878547
* notice: last 14d: unq all: 2 32
* notice: prev accum: outdated-unq outdated-all / unq all: 325 509 / 347 541
* notice: next accum: outdated-unq outdated-all / unq all: 327 512 / 348 544
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-09-11] / [2022-09-25]

2022-09-25T08:29:41Z: