@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-27T08:39:07Z",
-  "count_outdated" : 514,
-  "uniques_outdated" : 328,
-  "count" : 545,
-  "uniques" : 350,
+  "timestamp" : "2022-09-27T16:40:27Z",
+  "count_outdated" : 517,
+  "uniques_outdated" : 330,
+  "count" : 547,
+  "uniques" : 351,
   "clones" : [
-    {
-      "timestamp": "2022-09-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-09-14T00:00:00Z",
       "count": 3,
