@@ -1,12 +1,7 @@
 {
-  "count": 31,
+  "count": 30,
   "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2022-09-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-14T00:00:00Z",
       "count": 3,
