@@ -1,3 +1,11 @@
+2022-09-27T16:40:27Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3137376252
+* notice: last 14d: unq all: 2 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 328 514 / 350 545
+* notice: next accum: outdated-unq outdated-all / unq all: 330 517 / 351 547
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-13] / []
+
 2022-09-27T08:39:07Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3134150010
 * notice: last 14d: unq all: 2 31
